RSSFeeder implementation fixed and finalised